Fixed navbar/card overlap on some screen sizes

--- a/css/cover.css
+++ b/css/cover.css
@@ -158,7 +158,7 @@ body {
 html,body {
   height: 100%;
   background-color: #333;
-  background-image: url(../img/SAM_3326.JPG);
+  background-image: url(../img/SAM_3542.JPG);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -181,17 +181,48 @@ nav > .active {
 
 .email {font-size: 1.5em;}
 
+.large-card {
+  position:relative;
+  margin-top: 100px;
+}
+
 /* less than 75 */
-@media (max-width: 74.9em) { .email {font-size: 1.5em;} }
+@media (max-width: 74.9em)
+{
+  .email {font-size: 1.5em;}
+  .large-card {margin-top: 100px;}
+}
 
 /* less than 62 */
-@media (max-width: 61.9em) { .email {font-size: 1.4em;} }
+@media (max-width: 61.9em)
+{
+  .email {font-size: 1.4em;}
+  .large-card {margin-top: 100px;}
+}
 
 /* less than 48 */
-@media (max-width: 47.9em) { .email {font-size: 1em;} }
+@media (max-width: 47.9em)
+{ 
+  .email {font-size: 1em;} 
+  .large-card {margin-top: 100px;}
+}
+
 
 /* less than 34 */
-@media (max-width: 33.9em) { .email {font-size: .8em;} }
+@media (max-width: 39.9em)
+{ 
+  .email {font-size: .8em;}
+  .large-card {
+    margin-top: -50px;}
+}
+
+/* less than 34 */
+@media (max-width: 33.9em)
+{ 
+  .email {font-size: .8em;}
+  .large-card {
+    margin-top: -50px;}
+}
 
 footer {
   position: fixed;
@@ -201,7 +232,3 @@ footer {
   opacity: 0.6;
 }
 
-.service-card {
-  position:relative;
-  margin-top: 75px;
-}
